<resources>
    <string name="app_name">To do list</string>
    <string name="tarefas">Tarefas</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="titulo">Título</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="cancelar">Cancelar</string>
    <string name="descricao">Descrição</string>
    <string name="descripition_new_task">Nova Tarefa</string>
    <string name="label_editar">Editar</string>
    <string name="label_deletar">Deletar</string>
    <string name="label_you_dont_have_task">Ops! Você não possui\n nenhuma tarefa.</string>
</resources>